# platform-crm

./: .gitignore  BACKUP_RETRIEVAL_RUNBOOK.md  DEPLOY.md  MIGRATE_FRAPPE_TO_FASTAPI.md  MIGRATION_CHECKLIST.md  check_columns.py  docker-compose.env.example  docker-compose.yml  extract_users_data.py  find_child_tables.py  find_linked_expenses.py  migrate_deal_expenses.py  tasks.md
docs/: PIRIYATHU-CRM-FASTAPI-SPEC.md
fastapi-backend/: .env.example  Dockerfile  README.md  SETUP.md  consolidate_products.py  migration_report.json  pyproject.toml  requirements.txt  seed_user.py
fastapi-backend/app/: __init__.py  auth.py  config.py  db.py  db_migrations.py  main.py
fastapi-backend/app/models/: __init__.py  crm.py
fastapi-backend/app/routers/: __init__.py  auth.py  crm.py  frappe_compat.py
fastapi-backend/app/schemas/: __init__.py  crm.py
fastapi-backend/app/services/: crm.py  naming.py  resolve.py
fastapi-backend/migration/: README.md  backfill_public_ids.py  check_deal_product.sh  compare_databases.py  import_from_csv_export.py  manual_migration.py  migrate_data.py  migrate_from_backup.py  migrate_production.py  monitor.py  requirements.txt  rollback.py  sync_client_payments.py  sync_comments.py  test_deal_date.sh  test_deal_invalid.sh  test_deal_update.sh  test_logic.py  test_migration.py  test_product_in.sh  test_product_lookup.sh  update_deal_titles.py  validate_public_ids.py  validate_setup.py
fastapi-backend/tests/: test_lead_process.py  test_naming.py
piriyathu-crm-next/: .env.example  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  (+3 more)
(+57 files in other folders)
