[project]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for the CRM migration from Frappe."
requires-python = ">=3.11,<3.16"
readme = "README.md"
dynamic = ["license"]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.8",
    "python-dotenv>=1.0.0",
    "passlib[bcrypt]>=1.7.0",
    "PyJWT>=2.8.0",
    "redis>=4.5.5",
    "sqlalchemy>=2.1.0",
    "python-multipart>=0.0.6"
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"
